bug: fix for invitations icons not loading and wrong handling after accept on ios devices

--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -793,6 +793,8 @@ button.text-red-500 {
 .icon-button {
   width: 28px;
   height: 28px;
+  flex-shrink: 0;
+  box-sizing: content-box;
   display: inline-block;
   font-size: 24px;
   line-height: 1;
